Upgraded to java 21 by mostly replacing javax with jakarta. Also there were some other minor changes like URL to URI.toURL.